# nautilus

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
crates/nautilus-cli/: Cargo.toml  README.md
crates/nautilus-cli/src/: main.rs  tui.rs
crates/nautilus-cli/src/commands/: engine.rs  format.rs  mod.rs  python.rs  studio.rs
crates/nautilus-cli/src/commands/db/: connection.rs  mod.rs  pull.rs
crates/nautilus-cli/src/commands/migrate/: mod.rs
crates/nautilus-cli/wix/: main.wxs
crates/nautilus-codegen/: Cargo.toml  README.md
crates/nautilus-codegen/src/: backend.rs  generator.rs  lib.rs  schema_docs.rs  template.rs  vector_meta.rs  writer.rs
crates/nautilus-codegen/src/java/: backend.rs  bundle.rs  generator.rs  mod.rs  type_mapper.rs
crates/nautilus-codegen/src/js/: backend.rs  generator.rs
crates/nautilus-codegen/src/python/: backend.rs  generator.rs
crates/nautilus-codegen/templates/java/: Filters.java.tera  IsolationLevel.java.tera  NautilusModel.java.tera  NautilusOptions.java.tera  SortOrder.java.tera  TransactionBatchOperation.java.tera  TransactionOptions.java.tera  _dsl_macros.tera  composite.java.tera  delegate.java.tera  dsl.java.tera  enum.java.tera  model.java.tera  nautilus.java.tera  pom.xml.tera  projection.java.tera  transaction_client.java.tera
crates/nautilus-codegen/templates/java/runtime/: AbstractDelegate.java.tera  BaseNautilusClient.java.tera  BaseTransactionClient.java.tera  EngineProcess.java.tera  GlobalNautilusRegistry.java.tera  HandshakeException.java.tera  JsonSupport.java.tera  NautilusException.java.tera  NotFoundException.java.tera  ProtocolException.java.tera  RpcCaller.java.tera  TransactionException.java.tera  WireSerializable.java.tera
crates/nautilus-codegen/templates/js/: client.d.ts.tera  client.ts.tera  model.d.ts.tera  model.js.tera  model.ts.tera
crates/nautilus-codegen/templates/js/runtime/: _client.d.ts  _client.js  _client.ts  _engine.d.ts  _engine.js  _engine.ts  _protocol.d.ts  _protocol.js
crates/nautilus-codegen/templates/python/: client.py.tera  input_types.py.tera  model_file.py.tera
crates/nautilus-codegen/templates/python/runtime/: _client.py  _engine.py  _protocol.py
crates/nautilus-codegen/templates/rust/: Cargo.toml.tpl  columns_struct.tera  create.tera  create_many.tera  delegate.tera  delete.tera  find_many.tera  from_row_impl.tera  lib_rs.tera  model_file.tera  model_struct.tera  runtime.rs.tpl  update.tera
crates/nautilus-codegen/tests/: readme_contract_tests.rs  snapshot_tests.rs  stream_runtime_e2e_tests.rs  type_helpers_tests.rs  writer_tests.rs
crates/nautilus-codegen/tests/fixtures/stream_runtime_e2e/: StreamManyE2e.java.tpl  pydantic_stub.py  run_js_stream_many.mjs.tpl  run_python_stream_many.py.tpl
crates/nautilus-codegen/tests/snapshots/: snapshot_tests__python_class_is_generated.snap  snapshot_tests__python_client_sync.snap  snapshot_tests__python_enum_class.snap  snapshot_tests__python_optional_field_is_optional_type.snap  snapshot_tests__python_user_async.snap  snapshot_tests__rust_enum_generation.snap  snapshot_tests__rust_from_row_impl_generated.snap  snapshot_tests__rust_generates_create_input.snap  snapshot_tests__rust_generates_find_many_builder.snap  snapshot_tests__rust_optional_field_is_option.snap  snapshot_tests__rust_post_with_author_relation.snap  snapshot_tests__rust_struct_is_generated.snap  snapshot_tests__rust_user_async.snap  snapshot_tests__rust_user_with_posts_relation.snap
crates/nautilus-codegen/wix/: main.wxs
crates/nautilus-connector/: Cargo.toml  README.md
crates/nautilus-connector/src/: client.rs  executor.rs  lib.rs  mysql.rs  mysql_stream.rs  pool_options.rs  postgres.rs  postgres_stream.rs  row.rs  row_stream.rs  single_row.rs  sqlite.rs  sqlite_stream.rs  streaming.rs  transaction.rs  utils.rs  value_hint.rs
crates/nautilus-connector/tests/: integration_mysql.rs  integration_pg.rs  integration_sqlite.rs
crates/nautilus-core/src/: args.rs  delete.rs  expr.rs  insert.rs  lib.rs  protocol_json.rs  select.rs  update.rs  value.rs
crates/nautilus-core/src/column/: from_value.rs  (+3 more)
crates/nautilus-core/tests/: query_builders.rs
crates/nautilus-dialect/: README.md
crates/nautilus-dialect/src/: lib.rs  mysql.rs  postgres.rs  render_estimate.rs  sqlite.rs
crates/nautilus-dialect/tests/: dialect_tests.rs
crates/nautilus-engine/: Cargo.toml  README.md
crates/nautilus-engine/src/: args.rs  conversion.rs  lib.rs  metadata.rs  plan_cache.rs  pool_options.rs  state.rs  transport.rs
crates/nautilus-engine/src/filter/: context.rs  include.rs  mod.rs  ordering.rs  tests.rs  where_filter.rs
crates/nautilus-engine/src/handlers/: mod.rs
crates/nautilus-engine/src/handlers/crud/: aggregation.rs  common.rs  include.rs  mod.rs  mutations.rs  read.rs
crates/nautilus-engine/tests/: conversion_tests.rs  include_tests.rs  schema_aware_read_tests.rs  schema_validate_tests.rs  streaming_find_many_tests.rs  transaction_timeout_tests.rs
crates/nautilus-engine/tests/common/: mod.rs
crates/nautilus-engine/wix/: main.wxs
crates/nautilus-lsp/src/: backend.rs  convert.rs  document.rs
crates/nautilus-lsp/wix/: main.wxs
crates/nautilus-migrate/: README.md
crates/nautilus-migrate/src/: applier.rs  ddl.rs  diff.rs  executor.rs  live.rs  provider.rs  serializer.rs  tracker.rs
crates/nautilus-migrate/tests/: applier_tests.rs  ddl_tests.rs  diff_tests.rs  postgres_extensions_e2e.rs  serializer_tests.rs
crates/nautilus-protocol/src/: lib.rs  methods.rs  wire.rs
crates/nautilus-schema/: GRAMMAR.md  README.md
crates/nautilus-schema/src/: ast.rs  error.rs  formatter.rs  ir.rs  lexer.rs  lib.rs  parser.rs  span.rs
crates/nautilus-schema/tests/: analysis_tests.rs  formatter_tests.rs  ir_tests.rs  parser_tests.rs  validation_tests.rs
tools/vscode-nautilus-schema/: README.md  package.json
tools/vscode-nautilus-schema/snippets/: nautilus.code-snippets
tools/vscode-nautilus-schema/src/: extension.ts
tools/vscode-nautilus-schema/syntaxes/: nautilus.tmLanguage.json
(+20 files in other folders)
